--- a/css/style.css
+++ b/css/style.css
@@ -143,13 +143,7 @@ blockquote {
 #preview {
   height: 100%;
   overflow-y: scroll;
-  padding: 20px 0;
-}
-#preview-article {
-  background: #fff;
-  box-shadow: 1px 1px 10px #eee;
-  padding: 10px 20px;
-  border: 1px solid #eee;
+  padding: 20px 40px;
 }
 #preview-title {
   text-align: center;
@@ -159,6 +153,9 @@ blockquote {
   margin: 40px 0 20px 0;
 }
 #preview-body p {
+  font-size: 18px;
+  font-family: serif;
+  text-indent: 1em;
   margin-bottom: 30px;
 }
 #preview-body blockquote p {
@@ -190,7 +187,7 @@ blockquote {
 .draft-item {
   list-style: none;
   height: 80px;
-  padding: 10px;
+  padding: 20px;
   border-bottom: 1px solid #333;
   cursor: pointer;
   color: #aaa;
