--- a/src/jade/_main.jade
+++ b/src/jade/_main.jade
@@ -4,6 +4,7 @@
       form
         input#title(type='text', placeholder='Title', autofocus='', tabindex='1')
         textarea#body(placeholder='# Markdown text here.', tabindex='2')
+    #count-characters
     #notice(style='display: none;')
     .buttons
       button#deleteBtn.btn.btn-basic Delete
