--- a/src/jade/_sidebar.jade
+++ b/src/jade/_sidebar.jade
@@ -1,7 +1,11 @@
 #sidebar
   .row-sidebar
   .row-sidebar
-    button#addBtn.btn-add
+    button#syncBtn.btn-row.btn-sync-dropbox
+      i.fa.fa-dropbox
+      | Sync with Dropbox
+  .row-sidebar
+    button#addBtn.btn-row.btn-add
       i.fa.fa-plus-circle
       | Add New
   ul#draftsList
