--- a/src/jade/_sidebar.jade
+++ b/src/jade/_sidebar.jade
@@ -6,6 +6,6 @@
       | Sync with Dropbox
   .row-sidebar
     button#addBtn.btn-row.btn-add
-      i.fa.fa-plus-circle
-      | Add New
+      i.fa.fa-pencil
+      | Write
   ul#draftsList
