add modal partial

--- a/src/jade/_main.jade
+++ b/src/jade/_main.jade
@@ -8,7 +8,7 @@
     #notice(style='display: none;')
     .buttons
       button#deleteBtn.btn.btn-basic Delete
-      button#saveBtn.btn.btn-basic Save
+      button#saveBtn.btn.btn-basic.btn-positive Save
   .col-sm-7.preview-wrapper
     #preview
       h1#preview-title
