--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,6 +3,7 @@ block body
   include _header
   include _main
   include _sidebar
+  include _modal
 block scripts
   script#draft-template(type='text/template').
     <%- title %>
