fix btn-add to btn-positive

--- a/src/jade/_sidebar.jade
+++ b/src/jade/_sidebar.jade
@@ -5,7 +5,7 @@
       i.fa.fa-dropbox
       | Sync with Dropbox
   .row-sidebar
-    button#addBtn.btn-row.btn-add
+    button#addBtn.btn-row.btn-positive
       i.fa.fa-pencil
       | Write
   ul#draftsList
