modify text of signin button

--- a/src/jade/_sidebar.jade
+++ b/src/jade/_sidebar.jade
@@ -3,7 +3,7 @@
   .row-sidebar
     button#syncBtn.btn-row.btn-sync-dropbox
       i.fa.fa-dropbox
-      | Sync with Dropbox
+      | Sign in with Dropbox
   .row-sidebar
     button#addBtn.btn-row.btn-positive
       i.fa.fa-pencil
