--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -226,5 +226,6 @@ body, .editor-wrapper, form, #editor { height: inherit; }
 .selected, .draft-item:hover {
   background: #000; 
   color: #01AD38;
+  margin-left: 10px;
 }
 #notice { float: left; }
