relocate static files directories

--- a/src/jade/_layout.jade
+++ b/src/jade/_layout.jade
@@ -5,8 +5,8 @@ html(lang='en')
     meta(name='description', content='Nekobito is a Markdown text editor which enables you to write more comfortably.')
     meta(name='viewport', content='width=device-width, user-scalable=no')
     title Nekobito - Markdown Editor on Browser
-    link(rel='stylesheet', href='style.min.css')
-    link(rel='shortcut icon', href='images/favicon.ico')
+    link(rel='stylesheet', href='/style.min.css')
+    // link(rel='shortcut icon', href='/assets/images/favicon.ico')
   body
     block body
     block scripts
