--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,4 +7,4 @@ block body
 block scripts
   script#draft-template(type='text/template').
     <%- title %>
-  script(data-main='scripts/app.js', src='scripts/lib/require.js')
+  script(data-main='/scripts/app.js', src='/scripts/lib/require.js')
