--- a/src/jade/_layout.jade
+++ b/src/jade/_layout.jade
@@ -6,7 +6,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, user-scalable=no')
     title Nekobito - Markdown Editor on Browser
     link(rel='stylesheet', href='/style.min.css')
-    // link(rel='shortcut icon', href='/assets/images/favicon.ico')
+    link(rel='shortcut icon', href='/assets/images/favicon.ico')
   body
     block body
     block scripts
